Sonar + Table view start